# ha-octopus-french

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  readme.md  readme_en.md  readme_fr.md  requirements_test.txt  test-readings.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: tag-release.yaml  tests.yml  validate.yaml
custom_components/octopus_french/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  coordinator_intelligent.py  diagnostics.py  manifest.json  number.py  octopus_french.py  quality_scale.yaml  readme.md  readme_fr.md  select.py  sensor.py  services.yaml  statistics_import.py  strings.json  switch.py  utils.py
custom_components/octopus_french/api/: __init__.py  intelligent.py
custom_components/octopus_french/lib/: octopus_french.py
custom_components/octopus_french/sensors/: __init__.py  descriptions.py  electricity.py  gas.py  ledger.py
custom_components/octopus_french/translations/: en.json  fr.json
custom_components/octopus_french/utils/: logger.py
tests/: conftest.py  test_api_intelligent.py  test_auth.py  test_config_flow.py  test_coordinator.py  test_device_preferences.py  test_extractors.py  test_hc_sensor.py  test_init.py  test_normalize_label.py  test_sensor_setup.py  test_statistics_import.py  test_switch_bump_charge.py  test_switch_smart_control.py  test_tempo.py
tests/fixtures/: auth_token.json  boost_charge_refused.json  boost_charge_success.json  cancel_boost_charge.json  device_response.json
tools/: .env.example  README.md  _client.py  account.py  auth.py  index.py  query.py  readings.py  schema.py
